--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -107,6 +107,9 @@ form.add-product {
     padding:2.5%;
   }
   .dropdown {
+    position:absolute;
+    width:17%;
+    margin:-1em 0 0 0;
     >input[type='checkbox']{
       position: absolute;
       left:-9999px;
@@ -114,8 +117,9 @@ form.add-product {
     >input[type='checkbox']~.dropdown-list{ overflow:hidden }
     >input[type='checkbox']:checked~.dropdown-list{
       overflow:visible;
+      z-index:999;
       li:hover {
-        background: lightsteelblue;
+        background: rgba(0,0,255,0.75);
         color: white;
       }
       li:first-child:hover {
@@ -127,7 +131,6 @@ form.add-product {
     .dropdown-list {
       position: relative;
       height: 2em;
-      border: 1px solid rgba(0,0,0,0.25);
       overflow:hidden;
       li{
         position:absolute;
@@ -137,6 +140,10 @@ form.add-product {
         line-height:2em;
         padding:0 5%;
         background: white;
+        border: 1px solid rgba(0,0,255,0.5);
+      }
+      li:first-child {
+        border: 1px solid rgba(0,0,0,0.25);
       }
     }
     .dropdown-list:after {
