--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -21,7 +21,7 @@
 html,body { height:100% }
 
 h1, h2, h3 {
-  margin:0 0 1em 0;
+  margin:1em 0;
   color: grey;
 }
 h1 {
@@ -98,7 +98,7 @@ form.add-product {
 .grid{
   width:100%;
   height:30em;
-  margin: 1.5em 0 20em 0;
+  margin: 1.5em 0;
   background:rgba(0,0,0,0.075);
   overflow:hidden;
   th { font-size:1.25em }
