Added SmartFrame (dirty way, must be improved)

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -95,6 +95,19 @@ form.add-product {
   > li > input { width:30% }
 }
 
+.smartFrame {
+  position:absolute;
+  width:100%;
+  top:0;
+  left:0;
+  background: rgba(0,0,0,0.25);
+  h2 {
+    position:absolute;
+    top:800px;
+    left:50%;
+  }
+}
+
 .grid{
   width:100%;
   height:30em;
